<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="start"
        android:text="@string/dialog_title"
        android:textColor="#000"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/findPwDialogNameTi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/inputNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_num"
            android:inputType="textPersonName"
            android:textColorHint="#42000000" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_comment"
        android:textColor="#000"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/dialog_cancel"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_dialog_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/dialog_save"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>